# arrayfire_programming

arrayfire1/: CMakeLists.txt  main.cpp
